prevent removal of dependencies on outline rerender

--- a/src/components/base-outline.marko
+++ b/src/components/base-outline.marko
@@ -5,11 +5,11 @@
 	<head>
 		<title>${input.title}</title>
 		<${input.head}/>
-		<lasso-head/>
+		<lasso-head no-update/>
 	</head>
 	<body>
 		<${input.body}/>
-		<lasso-body/>
+		<lasso-body no-update/>
 	</body>
 </html>
 
