--- a/src/views/sign-up.marko
+++ b/src/views/sign-up.marko
@@ -113,7 +113,7 @@ $ let strengthDisplay = ("Estimated " +
 				style={backgroundColor: (state.pwd === state.conf ? 'white' : '#ffc0c0')}
 				value=state.conf on-input("updateConf") /><br/>
 			<tooltip style="margin-top: 0.5em">
-				<div class="pw-bar-container" title=strengthDisplay>
+				<div class="pw-bar-container">
 					<div class="pw-bar" style={backgroundColor: pwScore.color, width: `Calc(${pwScore.score*100}% - 4px)`}></div>
 					<div class="pw-bar-text">${pwScore.text}</div>
 				</div>
