--- a/src/components/tooltip.marko
+++ b/src/components/tooltip.marko
@@ -14,14 +14,26 @@ style {
 		border-radius: 8px;
 		background-color: rgba(128,128,128,0.75);
 		position: absolute;
-		left: 100%;
-		top: 50%;
-		transform: translate(0, -50%);
 		display: none;
 		font-size: 0.8em;
 		width: 20ch;
 	}
+	.tooltip::after{
+		content: "";
+		position: absolute;
+		border: 5px solid transparent;
+	}
 	.tooltip-container:hover .tooltip {
 		display: block;
+	}
+	.tooltip-right {
+		left: Calc(100% + 5px);
+		top: 50%;
+		transform: translate(0, -50%);
+	}
+	.tooltip-right::after {
+		left: -10px;
+		top: Calc(50% - 5px);
+		border-right-color: rgba(128, 128, 128, .75);
 	}
 }
