allow passing styles to tooltip component

--- a/src/components/tooltip.marko
+++ b/src/components/tooltip.marko
@@ -1,4 +1,4 @@
-<div class="tooltip-container">
+<div class="tooltip-container" style=input.style>
 	<${input.renderBody} />
 	<div class=["tooltip", "tooltip-"+input.dir] style=input.tooltipStyle>
 		<${input.tooltip} />
